# copilot-proxy

./: .gitignore  LICENSE  README.md  pyproject.toml
copilot_proxy/: __init__.py  __main__.py  config.py  inject_responses.py  server.py  utils.py
