[tool.poetry]
name = "copilot-proxy"
version = "0.1.0"
description = "An HTTP proxy with Flask and Cython"
authors = ["Jijun Leng"]
license = "MIT"
readme = "README.md"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
mitmproxy = "^10.3.1"
requests = "^2.32.3"
typer = "^0.12.3"
sseclient-py = "^1.8.0"
sse-starlette = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
types-requests = "^2.32.0.20240622"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
copilot_proxy = "copilot_proxy.__main__:main"
